--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -141,7 +141,7 @@
   {
     "id": "6",
     "name": "E-time",
-    "category": "2022",
+    "category": "PLC",
     "contest": "PNJ",
     "result": "finalist",
     "members": [
